--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -52,14 +52,14 @@ This tabular overview lists the suitable ontologies with regard to:
 | [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, UOM, PubChem |
 | [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based mapping possible | openPHACTS |
 | [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic & physical qualities | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | OBO Foundry, Allotrope™ |
-| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO alignment | PubChem |
+| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO alignment | PubChemRDF, Bio2RDF, SADI Semantic Web Services, DisGeNET, EBI's Gene Expression Atlas, Graph4Code project |
 | [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | life-sciences & data management | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | EMBOSS, Bio-jETI |
 | [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | upper level & engineering | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0) | provides upper level concepts | J-Park Simulator |
 
 ## General Scientific Ontologies
 
 ### BFO
-The second version of the Basic Formal Ontology ([BFO 2.0](https://terminology.nfdi4chem.de/ts/ontologies/bfo)) is used as the upper framework by the [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/). Hence, all ontologies that are part of the OBO Library or that strive to be compatible with OBO need to be aligned to this BFO version. Although the specification reference of BFO 2.0 includes relations, their [temporal aspectcs cause problems](https://github.com/oborel/obo-relations/wiki/ROAndBFO), which is why in the OWL implementation of the BFO 2.0 specification the OBO community decided to only use the BFO 2.0 classes and to curate some of its core relations in the OBO Relation Ontology. In order to become an ISO Standard, the BFO developers have released a newer version called the [BFO 2020](https://basic-formal-ontology.org/bfo-2020.html) that also includes relations. Since these relations still use the the previously critiqued temporalized approch, the OBO community has not adapted BFO 2020 as its upper framework so far. 
+The second version of the Basic Formal Ontology ([BFO 2.0](https://terminology.nfdi4chem.de/ts/ontologies/bfo)) is used as the upper framework by the [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/). Hence, all ontologies that are part of the OBO Library or that strive to be compatible with OBO need to be aligned to this BFO version. Although the specification reference of BFO 2.0 includes relations, their [temporal aspects cause problems](https://github.com/oborel/obo-relations/wiki/ROAndBFO), which is why in the OWL implementation of the BFO 2.0 specification the OBO community decided to only use the BFO 2.0 classes and to curate some of its core relations in the OBO Relation Ontology. In order to become an ISO Standard, the BFO developers have released a newer version called the [BFO 2020](https://basic-formal-ontology.org/bfo-2020.html) that also includes relations. Since these relations still use the previously critiqued temporalized approach, the OBO community has not adapted BFO 2020 as its upper framework so far. 
 
 ### SIO
 The Semanticscience Integrated Ontology ([SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio)) is another upper level ontology that provides basic concepts (e.g. objects, information and processes) as well as their associated basic characteristics (e.g. functions, qualities and roles). It also contains many basic relations (e.g. *part of*, *has participant* or *is about*) needed in the description of real objects, processes and information. It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](http://sadiframework.org), [DisGeNET](http://rdf.imim.es/DisGeNET.html), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](http://www.ebi.ac.uk/rdf/documentation/atlas) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
@@ -92,7 +92,7 @@ The ontology of Quantities, Units, Dimensions andTypes ([QUDT](https://doi.org/1
 ### Chemistry Domain Ontologies
 
 ### ChEBI
-The Chemical Entities of Biological Interest ([ChEBI](https://doi.org/10.1093/nar/gkp886)) ontology from the European Bioinformatics Institute (EMBL-EBI) is probably one of the most widely used ontologies in the chemical domain, as it provides a comprehensive and well-documented classification of chemical entities. The scope of ChEBI can be subdivided into three ontology modules. The first module, which is the branch that is subsumed under the BFO class *material entity*, covers the chemical entities *atom*, *group*, *chemical substance*  and *molecular entity*. CHEBI’s second ontology module, the branch that is subsumed under the BFO *role* class, covers the roles chemical entities can have (be a bearer of) when used or studied in a chemical, biological or an application context (e.g.*acid* or *base* role, *catalyst* etc.). The third module covers subatomic particles. Serving as the data model for the ChEBI database the ontology also demonstrates its importance to modern chemistry by the many databases it cross-references, such as Human Metabolome database (HMDB),the Golm metabolome database, MassBank, KNApSAcK, UM-BBD, SMID-DB and the Yeast Metabolomedatabase (YMDB), or the many ontologies that reuse terms from or map to it. New chemical entites can be added to ChEBI easily via an [online submission tool](http://www.ebi.ac.uk/chebi/submissions/). The correctness of such submissions will then be validated by the ChEBI curators.
+The Chemical Entities of Biological Interest ([ChEBI](https://doi.org/10.1093/nar/gkp886)) ontology from the European Bioinformatics Institute (EMBL-EBI) is probably one of the most widely used ontologies in the chemical domain, as it provides a comprehensive and well-documented classification of chemical entities. The scope of ChEBI can be subdivided into three ontology modules. The first module, which is the branch that is subsumed under the BFO class *material entity*, covers the chemical entities *atom*, *group*, *chemical substance*  and *molecular entity*. CHEBI’s second ontology module, the branch that is subsumed under the BFO *role* class, covers the roles chemical entities can have (be a bearer of) when used or studied in a chemical, biological or an application context (e.g.*acid* or *base* role, *catalyst* etc.). The third module covers subatomic particles. Serving as the data model for the ChEBI database the ontology also demonstrates its importance to modern chemistry by the many databases it cross-references, such as Human Metabolome database (HMDB),the Golm metabolome database, MassBank, KNApSAcK, UM-BBD, SMID-DB and the Yeast Metabolome database (YMDB), or the many ontologies that reuse terms from or map to it. New chemical entities can be added to ChEBI easily via an [online submission tool](http://www.ebi.ac.uk/chebi/submissions/). The correctness of such submissions will then be validated by the ChEBI curators.
 
 ### ChemOnt
 An alternative vocabulary to ChEBI for the classification of chemical compounds is the taxonomy ChemOnt. ChemOnt has originally been developed for [ClassyFire](https://dx.doi.org/10.1186%2Fs13321-016-0174-y), which is widely used for automatic classification of especially organic chemical compounds. Since ChemOnt is only a taxonomy, it lacks relations and axioms to further formalize the chemical knowledge it contains. Thus, it only provides the categories (classes) that are needed by ClassyFire. The actual rules/logic behind the application’s automated classification is encoded into its software. 
