--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -24,7 +24,7 @@ Image Attribution: Philip Strömert, [CC-BY 4.0](https://creativecommons.org/lic
 
 Here we can see that these ontologies have different scopes, which means they only provide terms for the representation/conceptualisation of certain aspects of reality (e.g. ChEBI only covers chemical material entities and their roles). Some have a rather narrow scope, some have a broader scope and sometimes these scopes overlap.  
 
-### Tabular overview of chemical ontologies
+## Tabular overview of chemical ontologies
 This tabular overview lists the suitable ontologies with regard to:
 * their general research domain, 
 * their open access license, 
@@ -89,7 +89,7 @@ The Unit Ontology ([UO](https://dx.doi.org/10.1093%2Fdatabase%2Fbas033)) is the 
 ### QUDT
 The ontology of Quantities, Units, Dimensions andTypes ([QUDT](https://doi.org/10.3233/SW-2012-0069)) is a non OBO compliant ontology that specifies quantities and units of measure.
 
-### Chemistry Domain Ontologies
+## Chemistry Domain Ontologies
 
 ### ChEBI
 The Chemical Entities of Biological Interest ([ChEBI](https://doi.org/10.1093/nar/gkp886)) ontology from the European Bioinformatics Institute (EMBL-EBI) is probably one of the most widely used ontologies in the chemical domain, as it provides a comprehensive and well-documented classification of chemical entities. The scope of ChEBI can be subdivided into three ontology modules. The first module, which is the branch that is subsumed under the BFO class *material entity*, covers the chemical entities *atom*, *group*, *chemical substance*  and *molecular entity*. CHEBI’s second ontology module, the branch that is subsumed under the BFO *role* class, covers the roles chemical entities can have (be a bearer of) when used or studied in a chemical, biological or an application context (e.g.*acid* or *base* role, *catalyst* etc.). The third module covers subatomic particles. Serving as the data model for the ChEBI database the ontology also demonstrates its importance to modern chemistry by the many databases it cross-references, such as Human Metabolome database (HMDB),the Golm metabolome database, MassBank, KNApSAcK, UM-BBD, SMID-DB and the Yeast Metabolome database (YMDB), or the many ontologies that reuse terms from or map to it. New chemical entities can be added to ChEBI easily via an [online submission tool](http://www.ebi.ac.uk/chebi/submissions/). The correctness of such submissions will then be validated by the ChEBI curators.
