--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -35,7 +35,7 @@ Moreover, the [best practice examples](/docs/topics/best_practice) can help to v
 - you stay master of your data when running your own Chemotion instance
 
 :::info Info:
-The [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in german) provides a good overview of Chemotion as a tool in research data management.
+The [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in German) provides a good overview of Chemotion as a tool in research data management.
 :::
 
 In case you are already working with another ELN or prefer to stay with the traditional notebook, the data needs to be stored in a FAIR way in a repositorium. Without using Chemotion ELN, the data can go to the Chemotion repo, but multiple repos exist meanwhile in chemistry.The advantage of the Chemotion repo is that the molecule gets a DOI and all analytical data can be assembled here.
