Add content to analytical chemistry article

--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -2,15 +2,69 @@
 title: "Analytical Chemistry"
 ---
 
+:::info Summary:
 
-Article about Analytical chemistry
+Analytical chemistry is one of the oldest scientific disciplines and an interdisciplinary science, combining methods of physical, inorganic and organic chemistry. Analytical chemistry aims to acquire, process, and evaluate signals to qualify and quantify the composition and to unravel the structure of matter. The analytical chemist applies classical (wet) chemistry and instrumental methods for separation, identification (qualification) and quantification. The discipline is related to many research fields in life, environmental, earth, and engineering sciences, such as metabolomics, medicine, and geochemistry. <br/>
+A typical workflow begins with the conceptualisation of the research question, and the planning of experiments, methods, and surveys to evaluate the hypotheses. Surveys are utilised in life, environmental, and earth sciences to perform experiments and/or to obtain samples required to support the research (e.g., laboratory and field campaigns, cohort studies). Experiments are conducted and samples are processed applying existing or newly established methods along with recording of accompanying metadata. Analytical chemistry applies already in the experimental or sampling stage as conditions need to be controlled or metadata has to be acquired (e.g., pH, temperature, colour). Once the product of the experiment or sample processing is obtained, it is analysed with suitable direct or combined methods for identification and quantification. Processing and interpretation of the acquired research data and [metadata](/docs/topics/metadata) support the answering of the research question and decisions for further experiments, research, and measures.
+:::
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut dolor a justo iaculis sagittis. Nullam sit amet sodales ligula. Nam vel turpis ante. Ut vestibulum, urna ut porttitor volutpat, nisi massa malesuada ex, vitae mattis lorem nisi ac lorem. Fusce bibendum nec enim at tincidunt. Phasellus convallis magna dui, eget cursus eros bibendum id. Phasellus eu lacinia quam. Morbi venenatis suscipit elit ut consectetur. Praesent ut quam ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque non faucibus massa. Duis consequat efficitur magna, non dignissim mauris imperdiet eget.
+## Type of experiments for chemical analysis
 
-Ut egestas metus ut ante luctus, tristique malesuada ante pretium. Mauris aliquet consectetur eros, eget mollis augue congue sollicitudin. Mauris iaculis metus vitae felis hendrerit, ac tempus tortor vestibulum. Proin ullamcorper, metus sed ultrices molestie, velit nulla feugiat odio, a fermentum erat sem quis sem. Maecenas pharetra mauris non luctus hendrerit. Donec non mauris blandit, fringilla lacus sed, porttitor sem. Integer a ante massa. Morbi rhoncus quis odio in maximus. Nullam mollis pulvinar condimentum. Nunc nulla magna, porttitor a porttitor id, suscipit non nibh. Fusce blandit purus maximus felis egestas imperdiet. Donec quis convallis nibh.
+- **Sampling**
+    - Collecting of materials for analysis
+    - Transport and storage without alteration of samples
+    - Small-scale experiments to develop / optimise approaches and equipment
+    - Upscaling of methods to obtain sufficient material for a comprehensive analysis
 
-Cras dictum pharetra lectus, a laoreet nulla commodo at. Proin aliquet risus eu nisi tempus, non lobortis mauris tristique. Vivamus at libero a risus ornare commodo. Integer in ante vestibulum, feugiat dolor at, blandit dui. Sed at dui non erat hendrerit ornare sit amet at lorem. Sed sed urna sodales, hendrerit elit sit amet, auctor turpis. Proin lobortis urna nec pulvinar iaculis. Morbi vel mollis erat, ut finibus eros. Phasellus in pharetra dui. Etiam vel ultricies tellus, in mollis ante. Aenean vel lectus odio. Ut tincidunt vel neque non faucibus. Mauris pulvinar velit fermentum, fermentum urna ac, ornare turpis. Integer vel tristique orci. Nulla malesuada mattis erat sed condimentum. Cras dui libero, iaculis a fringilla eget, luctus a diam.
+- **Sample processing**
+    - Preparation of the sample for analysis:
+        - Direct (“non-destructive”) methods: no further treatment (e.g., pH, RFA, MALDI, direct infusion)
+        - Combined methods:
+            - Extraction and enrichment (e.g., solid-phase extraction, aqua regia digestion, volatilisation of solvents)
+            - Separation of interfering compounds (e.g., chromatography, precipitation)
+            - Chemical transforming in measurable form (e.g., complexing, derivatisation)
+    - Small-scale experiments for screening / optimization of separation conditions and upscaling
 
-Integer cursus ipsum quis turpis feugiat, in elementum odio porta. Nulla nec ligula metus. Aliquam varius nisi nec mauris bibendum tristique. Maecenas vel elit ac leo suscipit facilisis eget non est. Donec aliquam suscipit erat. Praesent at odio et magna vestibulum euismod a eu nunc. Sed tristique id sapien quis aliquet. Suspendisse ac odio volutpat, mattis odio at, aliquam mauris. Curabitur ac nisl vitae ante interdum auctor vel sed ex. Donec ac accumsan magna. Sed orci justo, commodo dictum nibh vel, vestibulum posuere metus. Proin mollis sapien at libero tempor porttitor. Quisque quis risus posuere, varius diam sed, consectetur risus.
+- **Determination and evaluation** <br/>
+    Product characterisation with feasible methods (e.g., NMR spectroscopy, mass spectrometry, IR spectroscopy, UV/vis spectroscopy, elemental analysis)
+    - to identify analytes (targeted and non-targeted)
+    - to assess the constitution of mixtures
+    - to quantify analytes
 
-Nunc arcu leo, porta ac laoreet vitae, blandit eget elit. Vestibulum id augue ullamcorper, interdum magna nec, cursus odio. Donec quam justo, posuere sit amet ligula sit amet, pharetra pellentesque dolor. Nullam ante dui, porta vitae auctor eget, accumsan ut mauris. Nunc finibus malesuada accumsan. Sed at libero a ex sollicitudin aliquam. Donec in ante eget nisi cursus euismod. Fusce lorem justo, mollis quis commodo in, pulvinar at libero.
+## Planning of experiments
+
+- New and reused analytical methods and research ideas are derived from previous work of the own research group, scientific literature, datasets published in [repositories](/docs/topics/repositories), and requirements of public calls for research, development and demonstration projects.
+- Experimental design follows a logical order to achieve a specific goal, such as analytical selectivity and sensitivity, or in the case of a non-targeted analysis (e.g., in metabolomics), a coverage of a broad physical-chemical domain of analytes.
+- Planning is concluded by adding the experimental details. All [metadata](/docs/topics/metadata) is [documented](/docs/problems/data_documentation) in an [ELN](/docs/topics/eln) (e.g., [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) including references.
+
+## Documentation of experiments
+
+- Documentation of research data and metadata is carried out digitally using an ELN.
+- Experimental conditions (e.g., solvents, temperature, duration, pressure) are noted in the ELN and if available a laboratory information system.
+- Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, which may include temperatures, or the pH (with metadata where applicable).
+- Obtained data from analytical instruments (e.g., NMR, MS, or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
+- In case instrumental metadata is not convertible to open format without information loss, conditions need to be documented in the ELN.
+- Metadata related to the obtained data, such as mass, volumes, or solvent of measurement, have to be provided according to metadata standards, [e.g. x](/docs/topics/format_standards).
+
+## Data producing methods
+
+- Data can be collected during the experiment or after the experiment by analysing the obtained product.
+- Manually determined data: Experimental observations, mass, volumes, pH, etc.
+- Digital data are obtained with analytical instruments. An overview of file extensions, file sizes, and converters for several analytical methods is given in the table below.
+- Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the analytical device software. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+
+Table
+
+## Data analysis
+
+- Research data are processed, analysed and compared (also to data of other experiments) within the Chemotion ELN.
+- Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
+- A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
+
+
+## Publication of research data
+
+- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/problems/data_publication) in a [repository](/docs/topics/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/topics/fair) ([Best practice examples](/docs/topics/best_practice)).
+- Data publication in a repository includes raw and processed data for reuse.
+- The use of the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) enables a direct transfer of research data and the respective metadata to the [Chemotion Repository](https://www.chemotion-repository.net/welcome). Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [MassBank](https://massbank.eu/MassBank/) for reference mass spectra, data have to be exported from the Chemotion ELN and submitted to the respective database.
+- A [persistent identifier](/docs/topics/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
