Add table to analytical chemistry article

--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -53,7 +53,26 @@ A typical workflow begins with the conceptualisation of the research question, a
 - Digital data are obtained with analytical instruments. An overview of file extensions, file sizes, and converters for several analytical methods is given in the table below.
 - Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the analytical device software. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-Table
+|Analytical method|Exemplary proprietary file extensions|Typical size of proprietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
+|:------------|:------------|:------------|:------------|:------------|:------------|:------------|
+|NMR spectroscopy|.fid|<1-50 MB|MNova<br/>Topspin|.jdx<br/>.zip<br/>|JCAMP-DX<br/>NMReDATA|~1 MB|
+|Mass spectrometry|.raw<br/>.d<br/>.baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
+|IR spectroscopy|.ispd<br/>.icIR|<1 MB| |.dx|JCAMP-DX|<1 MB|
+|Raman spectroscopy|.dpt<br/>.spc<br/>.icRaman<br/>.sps<br/>.acs|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
+|UV/vis spectroscopy|.dsw<br/> .str<br/>.bsk<br/>.bkn<br/>.ksd<br/>.jws<br/>.jwb<br/>.str8<br/>.spc<br/>.sre|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+|Fluorescence spectroscopy|.fds<br/>.fs2f<br/>.jws<br/>.opj|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
+|Single crystal XRD|.raw|~1 GB|proprietary software|.cif|crystallographic information file|<1 MB|
+|Powder XRD|.raw|<1 MB|proprietary software|.xyd|text file|<1 MB|
+|Gas chromatography|.gcd<br/>.d|~2 MB|proprietary software|.txt|text file|<1 MB|
+|HPLC|.xls|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+|Cyclic voltammetry|.nox<br/>.pssession|~8 MB|proprietary software|.txt|text file|<1 MB|
+|EPR spectroscopy|.spe|<1 MB|proprietary software|.txt|text file|<1 MB|
+|Differential scanning calorimetry|.ngb-dsu<br/>.ngb-taa|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+|Elemental analysis| | |proprietary software|.txt|text file|<1 MB|
+|Physisorption|.smp|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+
+:::note *This table will be continuously updated with new recommendations on interoperable open file formats.
+:::
 
 ## Data analysis
 
