--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -142,7 +142,7 @@ In order to be able to speak about the existing ontologies in the domain of chem
 * **domain ontologies** conceptualize specific aspects of a given domain (e.g. ChEBI conceptualizes only chemical entities like atoms and molecules as well as their roles in certain contexts)
 * **application ontologies** are domain ontologies that are implemented in a concrete application and thus limited to the applications use cases
 
-## References/ further reading
+## Sources and further information 
 * [Ontologies4Chem overview paper](https://drive.google.com/drive/folders/1lVsDZX9Jm5XK_c0qgNs-ZnNf_sOZ-1VF) by TA 6.1
 ----
 written by: https://orcid.org/0000-0002-1595-3213
