--- a/docs/40_topics/40_format_standards.mdx
+++ b/docs/40_topics/40_format_standards.mdx
@@ -4,7 +4,7 @@ title: "Data Format Standard"
 
 # Data format standard
 
-Research data is the key to any science. As part of a [FAIR](01_fair.mdx) practice, these data should be accompanied by valuable [metadata](30_metadata.mdx) and have to be exchanged in standardized and open formats. In chemistry these data include experimental parameters and measurement results, chemical structures, properties of compounds and descriptions of reactions. Whenever research data are published, stored, shared or reused, chemists have to decide for a format suitable the purpose and consider the long-term stages of the [data life cycle](110_data_life_cycle.mdx). [Repositories](20_repositories.mdx) and Databases often accept specific formats to ensure comparability and completeness of data and metadata provided. If chemists are aware of data standards during data acquisition and research documentation, later conversions will be less challenging. [Electronic lab notebooks](10_eln.mdx) can support the scientist in the early stages of data management.
+Research data is the key to any science. As part of a [FAIR](01_fair.mdx) practice, these data should be accompanied by valuable [metadata](30_metadata.mdx) and have to be exchanged in standardised and open formats. In chemistry these data include experimental parameters and measurement results, chemical structures, properties of compounds and descriptions of reactions. Whenever research data are published, stored, shared or reused, chemists have to decide on a format suitable for the purpose and consider the long-term stages of the [data life cycle](110_data_life_cycle.mdx). [Repositories](20_repositories.mdx) and databases often accept specific formats to ensure comparability and completeness of data and metadata provided. If chemists are aware of data standards during data acquisition and research documentation, later conversions will be less challenging. [Electronic lab notebooks](10_eln.mdx) can support the scientist in the early stages of data management.
 
 ## Definitions
 
