--- a/docs/40_topics/40_format_standards.mdx
+++ b/docs/40_topics/40_format_standards.mdx
@@ -73,7 +73,7 @@ The [ISA (Investigation-Study-Assay) framework](https://doi.org/10.5281/zenodo.1
 
 Experimental data obtained with spectroscopic methods such as infrared-spectroscopy, Raman and UV/Vis-spectroscopy, are often comparatively small in size and straightforward in their structure. Vendors store the raw data in proprietary formats, either as binary data or in ASCII. These can be exported as (or converted to) Excel spreadsheets or plain text tables with x,y pairs (or similar format). A header section may include metadata.
 
-Users have to further process such data for their specific needs, and currently no overarching specifications exist. Repositories may convert these to a specified format, e.g. Chemotion ELN will convert text and Excel files to JCAMP-DX.
+Users have to further process such data for their specific needs, and currently no overarching specifications exist. Repositories may convert these to a specified format, e.g. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/docs/eln/about)  will convert text and Excel files to JCAMP-DX.
 
 There are a few vendor formats which are popular for data exchange: GRAMS SPC, Perkin Elmer SP and Bruker OPUS files are supported not only by the format creators, but also by other vendors and instrument-agnostic software tools for e.g. statistical analysis.
 
@@ -116,7 +116,7 @@ Crystal structure analyses by X-ray diffraction are fundamental techniques in ch
 
 With the [Crystallographic Information File (CIF)](https://doi.org/10.1107/S0108768102003464), there is a common exchange format for crystallographic data, which is developed and maintained by the International Union for Crystallography. The CIF is an implementation of the STAR file format and thus a text file which is organised in data blocks which are described by data names or tags. These data names are defined in plain text dictionaries, which use a controlled language and are readable for humans and computers. Besides the core dictionary with tags relevant for small-molecule and inorganic crystals, there are dictionaries for special applications like powder x-ray diffraction or macromolecular crystals (mmCIF). The possibility to extend the format by adding new dictionaries makes it ready for new methods and applications. Furthermore, with the Crystallographic Information Framework there is also a data model, which relies on the same principles as the file format and can be adapted to specific applications.
 
-Databases and repositories like The [Cambridge Structural Database (CSD)](https://doi.org/10.1107/S2052520616003954) and [Crystallography Open Database (COD)](https://doi.org/10.1093/nar/gkr900) will only accept CIF as format to deposit crystallographic data.
+Databases and repositories such as The [Cambridge Structural Database (CSD)](https://doi.org/10.1107/S2052520616003954) and [Crystallography Open Database (COD)](https://doi.org/10.1093/nar/gkr900) will only accept CIF as format to deposit crystallographic data.
 
 
 #### Data Standards in X-Ray Absorption and Fluorescence Spectroscopy
