--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -8,11 +8,11 @@ This article applies to research group leaders, who plan to organise the RDM of 
 
 ## Motivation
 
-As research group leader, you are responsible for the [research data organisation](/docs/problems/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/problems/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) way (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable). Many funding institutions encourage or even enforce the publication of FAIR data.
+As research group leader, you are responsible for the [research data organisation](/docs/data/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/data/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) way (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable). Many funding institutions encourage or even enforce the publication of FAIR data.
 
 In the last years, many new digital tools have been developed to support the researchers in their RDM needs. In short, the technical possibilities are explained below. For more details, please refer to the related chapters.
 
-With regard to the [data life cycle](/docs/topics/data_life_cycle) (figure below), the digitalisation of the research data at the end of the production process is the most tedious strategy. It is more efficient to capture the data and their corresponding [metadata](/docs/topics/metadata) already during the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/topics/eln) are facilitating everyday's work considerably: the planning of the experiment, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: the peak lists (e.g. for the supporting information of [publications](/docs/problems/data_publication) for the reporting can be generated automatically by the ELN. The time invest to set up the ELN and to organise the experiments is hence paying off in numerous ways: besides the facilitated [documentation](/docs/problems/data_documentation), the deposition of the produced data in a FAIR form in an [repositorium](/docs/topics/repositories) is made easier and the [data organisation](/docs/problems/data_organisation) for the workgroup can be enhanced by building an internal database. This is invaluable for growing working groups.
+With regard to the [data life cycle](/docs/topics/data_life_cycle) (figure below), the digitalisation of the research data at the end of the production process is the most tedious strategy. It is more efficient to capture the data and their corresponding [metadata](/docs/topics/metadata) already during the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/topics/eln) are facilitating everyday's work considerably: the planning of the experiment, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: the peak lists (e.g. for the supporting information of [publications](/docs/data/data_publication) for the reporting can be generated automatically by the ELN. The time invest to set up the ELN and to organise the experiments is hence paying off in numerous ways: besides the facilitated [documentation](/docs/data/data_documentation), the deposition of the produced data in a FAIR form in an [repositorium](/docs/topics/repositories) is made easier and the [data organisation](/docs/data/data_organisation) for the workgroup can be enhanced by building an internal database. This is invaluable for growing working groups.
 
 ![Data life cycle](/img/Intro/N4C_DataLifecycle.svg)
 
