--- a/docs/30_data/50_data_storage.mdx
+++ b/docs/30_data/50_data_storage.mdx
@@ -3,7 +3,7 @@ title: "Data Storage and Archiving"
 description: how to find appropriate storage solutions
 page_id: data_storage
 related_pages:
-	problems: [data_organisation, data_documentation]
+	Handling data: [data_organisation, data_documentation]
 	topics: [repositories]
 ---
 
@@ -12,7 +12,7 @@ If you plan to collect data and process it into information, you should consider
 ## Workflow perspective
 Let's discuss different storage solutions along a possible workflow. Think of all possible data sources that provide data in your project, such as laboratory equipment (devices), manually collected data or external data from publications or project partners. Some devices may continuously automatically deliver data points while others regularly provide files for collection. Reduce the amount to the data points necessary for your project, consider possible pre-processing and estimate the data that will arise in terms of frequency and size. It is possible that data can already be processed while other data of the same type is still being recorded. At what point in the workflow is the data annotated by further metadata and does this possibly also work automatically? What descriptive documents are provided by human sources and when?
 
-When planning [data management](/docs/problems/dmp/), think about storage solutions and request short-term and long-term storage in advance.
+When planning [data management](/docs/data/dmp/), think about storage solutions and request short-term and long-term storage in advance.
 
 #### Necessary requirements when designing a storage system:
 - space requirements for collection or generation raw data including temporary files ("fast storage")
