--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -39,19 +39,19 @@ The result should be descriptive documents that unambiguously define for files w
 - for how long (temporarily, project duration, long-term availability),
 - and in which format they are saved.
 
-<img alt="small data handout" src={useBaseUrl('/img/problems/en_data_handout.png')} width="600" align="center" vspace="10" hspace="10" />
+<img alt="small data handout" src={useBaseUrl('/img/data/en_data_handout.png')} width="600" align="center" vspace="10" hspace="10" />
 
 
 ### Technical implementations
 
-Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof [Data Organisation](/docs/problems/data_organisation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
+Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof [Data Organisation](/docs/data/data_organisation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/data/data_publication/) with [PID](/docs/topics/pid/).
 
-Data security affects all technical and organisational issues to protect the data from alteration, loss, and destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
+Data security affects all technical and organisational issues to protect the data from alteration, loss, and destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/data/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
 
 
 ## Synopsis
 
-<img alt="small data handout" src={useBaseUrl('/img/problems/en_data_orgsteps.png')} width="400" align="right" vspace="10" hspace="10" />
+<img alt="small data handout" src={useBaseUrl('/img/data/en_data_orgsteps.png')} width="400" align="right" vspace="10" hspace="10" />
 
 Good data documentation does not happen over night - take small steps first. The documentation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
 - Record of status quo:
