--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -6,7 +6,7 @@ title: "Data Management Plan"
 
 ## Introduction
 
-Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and its [metadata](/docs/topics/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/problems/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
+Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and its [metadata](/docs/topics/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/data/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
 
 A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a laboratory information management system in chemistry, represents a type of documentation. These different types of documentation must be considered at different levels. A DMP answers the W-questions for documentation. 
 
@@ -14,7 +14,7 @@ A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a labo
 
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on. The following [elements](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) are included in a DMP:
 
-![DMP](/img/problems/DMP.png)
+![DMP](/img/data/DMP.png)
 
 ## Benefits of a DMP
 
