--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -22,7 +22,7 @@ A clean and comprehensible organisation of data and documents are an important p
 
 An essential task is to plan the organisation and storage of data, [metadata](/docs/topics/metadata), and documents in advance and to document the relevant measures.
 
-Central requirements are the definition of [formal responsibilities, organisational conventions](#formal-responsibilities-and-organisational-conventions) and [technical implementations](#technical-implementations) to organise the data and meta information produced. The information collected for this purpose is recorded in the [Data Management Plan](/docs/problems/dmp). Note that a good data organisation also estimates the costs (see [costing tool and checklist](https://ukdataservice.ac.uk/learning-hub/research-data-management/plan-to-share/costing/) for example) in the early application phase.
+Central requirements are the definition of [formal responsibilities, organisational conventions](#formal-responsibilities-and-organisational-conventions) and [technical implementations](#technical-implementations) to organise the data and meta information produced. The information collected for this purpose is recorded in the [Data Management Plan](/docs/data/dmp). Note that a good data organisation also estimates the costs (see [costing tool and checklist](https://ukdataservice.ac.uk/learning-hub/research-data-management/plan-to-share/costing/) for example) in the early application phase.
 
 
 ### Formal responsibilities and organisational conventions
