--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -16,7 +16,7 @@ _Andreas von der Dunk, Technische Universität Dresden, Service Center Research 
 
 ## General basics
 
-<img alt="data for future generations" src={useBaseUrl('/img/problems/data_1517.png')} width="250" align="right" vspace="10" hspace="10" />
+<img alt="data for future generations" src={useBaseUrl('/img/data/data_1517.png')} width="250" align="right" vspace="10" hspace="10" />
 
 A clean and comprehensible organisation of data and documents are an important part of good scientific practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
 
